Fix overflow issue on small mobile screens

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -139,6 +139,10 @@ body {
   }
 }
 
+.main-wrapper {
+  overflow-x: hidden;
+}
+
 /* Footer */
 .footer {
   padding: 10px;
